# long_temp

./: .gitignore  README.md  copy_rem_back.py  copy_remove.py  creation_kit_manifest.json  itinery_creationkit_manual.json  pyproject.toml  spc_gls.json
longtemp/: file_ops.py  filetracker.py  intinery_file.py  itinery.py  main.py  main_zip2.py  mainfest.py  unrar.py
longtemp/v1/: dataclass_encodings.py  file_ops1.py  file_ops_cls.py  intinery_file1.py  itinery1.py  lt_cls.py  main.py  main_zip1.py
src/long_temporary/: __init__.py  file_ops.py  itinery.py  itinery_logger.py  main.py  mainfest.py  unrar.py
tests/: test_main.py  test_v2.py
v1/: copy_rem_back_.py  copy_remove.py  sym.py
v2/: copy_removev2.py  file_ops.py  file_ops_cls.py  intinery_file.py  itinery.py
