[project]
name = "long-temporary"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    'loguru',
    "pydantic",
    'pawlogger @ git+https://github.com/pawrequest/pawlogger',
]

[project.scripts]
long-temporary = "long_temporary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
